Exposed surface_lw_ratio_model parameter in burn_cell_* and spread_fire_* functions

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -3001,21 +3001,22 @@ def maybe_limit_wind_speed(use_wind_limit, max_wind_speed, get_phi_W, get_wind_s
 
 # NOTE: No longer takes ellipse_adjustment_factor parameter
 def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, upwind_direction,
-                                   slope, aspect, use_wind_limit=True):
+                                   slope, aspect, use_wind_limit=True, surface_lw_ratio_model="rothermel"):
     """
     Given these inputs:
-    - surface_fire_min       :: dictionary of no-wind-no-slope surface fire behavior values
-      - base_spread_rate         :: m/min
-      - base_fireline_intensity  :: kW/m
-      - max_effective_wind_speed :: m/min
-      - get_phi_S                :: lambda: slope (rise/run) => phi_S (unitless)
-      - get_phi_W                :: lambda: midflame_wind_speed (m/min) => phi_W (unitless)
-      - get_wind_speed           :: lambda: phi_W (unitless) => midflame_wind_speed (m/min)
-    - midflame_wind_speed    :: m/min
-    - upwind_direction       :: degrees clockwise from North
-    - slope                  :: rise/run
-    - aspect                 :: degrees clockwise from North
-    - use_wind_limit         :: boolean (Optional)
+    - surface_fire_min            :: dictionary of no-wind-no-slope surface fire behavior values
+      - base_spread_rate             :: m/min
+      - base_fireline_intensity      :: kW/m
+      - max_effective_wind_speed     :: m/min
+      - get_phi_S                    :: lambda: slope (rise/run) => phi_S (unitless)
+      - get_phi_W                    :: lambda: midflame_wind_speed (m/min) => phi_W (unitless)
+      - get_wind_speed               :: lambda: phi_W (unitless) => midflame_wind_speed (m/min)
+    - midflame_wind_speed         :: m/min
+    - upwind_direction            :: degrees clockwise from North
+    - slope                       :: rise/run
+    - aspect                      :: degrees clockwise from North
+    - use_wind_limit              :: boolean (Optional)
+    - surface_lw_ratio_model      :: "rothermel" or "behave" (Optional)
 
     return a dictionary containing these keys:
     - max_spread_rate        :: m/min
@@ -3052,7 +3053,7 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, upwind
     # Calculate and return max surface fire behavior values
     max_spread_rate        = spread_rate * (1.0 + limited_phi_E)
     max_fireline_intensity = fireline_intensity * (1.0 + limited_phi_E)
-    length_to_width_ratio  = surface_length_to_width_ratio(limited_wind_speed)
+    length_to_width_ratio  = surface_length_to_width_ratio(limited_wind_speed, surface_lw_ratio_model)
     return {
         "max_spread_rate"       : max_spread_rate,
         "max_spread_direction"  : max_spread_direction, # unit vector
@@ -3759,7 +3760,7 @@ import pyretechnics.vector_utils as vu
 
 def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_density, heat_of_combustion,
                                  estimated_fine_fuel_moisture, wind_speed_10m, upwind_direction,
-                                 slope, aspect, max_length_to_width_ratio=None):
+                                 slope, aspect, crown_max_lw_ratio=None):
     """
     Given these inputs:
     - canopy_height                                    :: m
@@ -3771,7 +3772,7 @@ def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_
     - upwind_direction                                 :: degrees clockwise from North
     - slope                                            :: rise/run
     - aspect                                           :: degrees clockwise from North
-    - max_length_to_width_ratio                        :: float > 0.0 (Optional)
+    - crown_max_lw_ratio                               :: float > 0.0 (Optional)
 
     return a dictionary containing these keys:
     - max_fire_type          :: "passive_crown" or "active_crown"
@@ -3802,7 +3803,7 @@ def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_
     spread_rate           = spread_info["spread_rate"] # m/min
     fireline_intensity    = calc_crown_fireline_intensity(spread_rate, canopy_bulk_density, canopy_height,
                                                           canopy_base_height, heat_of_combustion) # kW/m
-    length_to_width_ratio = crown_length_to_width_ratio(wind_speed_10m_3d, max_length_to_width_ratio) # unitless
+    length_to_width_ratio = crown_length_to_width_ratio(wind_speed_10m_3d, crown_max_lw_ratio) # unitless
     eccentricity          = crown_fire_eccentricity(length_to_width_ratio) # unitless
     return {
         "max_fire_type"         : spread_info["fire_type"],
@@ -5987,11 +5988,11 @@ import pyretechnics.vector_utils as vu
 
 
 # TODO: Create a version of this function that runs efficiently over a space_time_region
-def burn_cell_as_head_fire(space_time_cubes, space_time_coordinate,
-                           use_wind_limit=True, max_length_to_width_ratio=None):
+def burn_cell_as_head_fire(space_time_cubes, space_time_coordinate, use_wind_limit=True,
+                           surface_lw_ratio_model="rothermel", crown_max_lw_ratio=None):
     """
     Given these inputs:
-    - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
+    - space_time_cubes             :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
       - slope                         :: rise/run
       - aspect                        :: degrees clockwise from North
       - fuel_model                    :: integer index in fm.fuel_model_table
@@ -6009,9 +6010,10 @@ def burn_cell_as_head_fire(space_time_cubes, space_time_coordinate,
       - foliar_moisture               :: kg moisture/kg ovendry weight
       - fuel_spread_adjustment        :: float >= 0.0 (Optional: defaults to 1.0)
       - weather_spread_adjustment     :: float >= 0.0 (Optional: defaults to 1.0)
-    - space_time_coordinate     :: (t,y,x)
-    - use_wind_limit            :: boolean (Optional)
-    - max_length_to_width_ratio :: float > 0.0 (Optional)
+    - space_time_coordinate        :: (t,y,x)
+    - use_wind_limit               :: boolean (Optional)
+    - surface_lw_ratio_model       :: "rothermel" or "behave" (Optional)
+    - crown_max_lw_ratio           :: float > 0.0 (Optional)
 
     return a dictionary with these fire behavior values for the space-time coordinate (t,y,x):
     - fire_type          :: "unburned", "surface", "passive_crown", or "active_crown"
@@ -6139,7 +6141,8 @@ def burn_cell_as_head_fire(space_time_cubes, space_time_coordinate,
                                                              upwind_direction,
                                                              slope,
                                                              aspect,
-                                                             use_wind_limit)
+                                                             use_wind_limit,
+                                                             surface_lw_ratio_model)
 
         # Simplify the surface fire behavior fields for future comparison/combination with the crown fire behavior values
         surface_fire_max_simple = sf.calc_surface_fire_behavior_in_direction(surface_fire_max,
@@ -6163,7 +6166,7 @@ def burn_cell_as_head_fire(space_time_cubes, space_time_coordinate,
                                                              canopy_bulk_density, heat_of_combustion,
                                                              estimated_fine_fuel_moisture,
                                                              wind_speed_10m, upwind_direction,
-                                                             slope, aspect, max_length_to_width_ratio)
+                                                             slope, aspect, crown_max_lw_ratio)
 
             # Simplify the crown fire behavior fields for future comparison/combination with the surface fire behavior values
             crown_fire_max_simple = cf.calc_crown_fire_behavior_in_direction(crown_fire_max,
@@ -6220,11 +6223,11 @@ import pyretechnics.vector_utils as vu
 
 
 # TODO: Create a version of this function that runs efficiently over a space_time_region
-def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
-                             use_wind_limit=True, max_length_to_width_ratio=None):
+def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth, use_wind_limit=True,
+                             surface_lw_ratio_model="rothermel", crown_max_lw_ratio=None):
     """
     Given these inputs:
-    - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
+    - space_time_cubes             :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
       - slope                         :: rise/run
       - aspect                        :: degrees clockwise from North
       - fuel_model                    :: integer index in fm.fuel_model_table
@@ -6242,10 +6245,11 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
       - foliar_moisture               :: kg moisture/kg ovendry weight
       - fuel_spread_adjustment        :: float >= 0.0 (Optional: defaults to 1.0)
       - weather_spread_adjustment     :: float >= 0.0 (Optional: defaults to 1.0)
-    - space_time_coordinate     :: (t,y,x)
-    - azimuth                   :: degrees clockwise from North on the horizontal plane
-    - use_wind_limit            :: boolean (Optional)
-    - max_length_to_width_ratio :: float > 0.0 (Optional)
+    - space_time_coordinate        :: (t,y,x)
+    - azimuth                      :: degrees clockwise from North on the horizontal plane
+    - use_wind_limit               :: boolean (Optional)
+    - surface_lw_ratio_model       :: "rothermel" or "behave" (Optional)
+    - crown_max_lw_ratio           :: float > 0.0 (Optional)
 
     return a dictionary with these fire behavior values for the space-time coordinate (t,y,x):
     - fire_type          :: "unburned", "surface", "passive_crown", or "active_crown"
@@ -6373,7 +6377,8 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
                                                              upwind_direction,
                                                              slope,
                                                              aspect,
-                                                             use_wind_limit)
+                                                             use_wind_limit,
+                                                             surface_lw_ratio_model)
 
         #============================================================================================
         # Calculate surface fire behavior in the direction of the azimuth vector
@@ -6398,7 +6403,7 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
                                                              canopy_bulk_density, heat_of_combustion,
                                                              estimated_fine_fuel_moisture,
                                                              wind_speed_10m, upwind_direction,
-                                                             slope, aspect, max_length_to_width_ratio)
+                                                             slope, aspect, crown_max_lw_ratio)
 
             #========================================================================================
             # Calculate crown fire behavior in the direction of the azimuth vector
@@ -7329,11 +7334,11 @@ import pyretechnics.vector_utils as vu
 
 
 # TODO: Create a version of this function that runs efficiently over a space_time_region
-def burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate, phi_gradient_xy,
-                                  use_wind_limit=True, max_length_to_width_ratio=None):
+def burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate, phi_gradient_xy, use_wind_limit=True,
+                                  surface_lw_ratio_model="rothermel", crown_max_lw_ratio=None):
     """
     Given these inputs:
-    - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
+    - space_time_cubes             :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
       - slope                         :: rise/run
       - aspect                        :: degrees clockwise from North
       - fuel_model                    :: integer index in fm.fuel_model_table
@@ -7351,10 +7356,11 @@ def burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate, phi_g
       - foliar_moisture               :: kg moisture/kg ovendry weight
       - fuel_spread_adjustment        :: float >= 0.0 (Optional: defaults to 1.0)
       - weather_spread_adjustment     :: float >= 0.0 (Optional: defaults to 1.0)
-    - space_time_coordinate     :: (t,y,x)
-    - phi_gradient_xy           :: (dphi_dx: phi/m, dphi_dy: phi/m) 2D vector on the horizontal plane
-    - use_wind_limit            :: boolean (Optional)
-    - max_length_to_width_ratio :: float > 0.0 (Optional)
+    - space_time_coordinate        :: (t,y,x)
+    - phi_gradient_xy              :: (dphi_dx: phi/m, dphi_dy: phi/m) 2D vector on the horizontal plane
+    - use_wind_limit               :: boolean (Optional)
+    - surface_lw_ratio_model       :: "rothermel" or "behave" (Optional)
+    - crown_max_lw_ratio           :: float > 0.0 (Optional)
 
     return a dictionary with these fire behavior values for the space-time coordinate (t,y,x):
     - dphi_dt            :: phi/min (on the slope-tangential plane)
@@ -7505,7 +7511,8 @@ def burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate, phi_g
                                                              upwind_direction,
                                                              slope,
                                                              aspect,
-                                                             use_wind_limit)
+                                                             use_wind_limit,
+                                                             surface_lw_ratio_model)
 
         #============================================================================================
         # Calculate surface fire behavior normal to the fire perimeter
@@ -7530,7 +7537,7 @@ def burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate, phi_g
                                                              canopy_bulk_density, heat_of_combustion,
                                                              estimated_fine_fuel_moisture,
                                                              wind_speed_10m, upwind_direction,
-                                                             slope, aspect, max_length_to_width_ratio)
+                                                             slope, aspect, crown_max_lw_ratio)
 
             #========================================================================================
             # Calculate crown fire behavior normal to the fire perimeter
@@ -7776,9 +7783,9 @@ def spread_direction_vector_to_angle(vector_3d):
     return azimuth
 
 
-def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, tracked_cells,
-                             cube_resolution, start_time, max_timestep, use_wind_limit=True,
-                             max_length_to_width_ratio=None, max_cells_per_timestep=0.4, buffer_width=3,
+def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, tracked_cells, cube_resolution,
+                             start_time, max_timestep, use_wind_limit=True, surface_lw_ratio_model="rothermel",
+                             crown_max_lw_ratio=None, max_cells_per_timestep=0.4, buffer_width=3,
                              spot_ignitions={}, spot_config=None, random_generator=None):
     """
     TODO: Add docstring
@@ -7830,7 +7837,8 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
         # Calculate the fire behavior normal to the fire front on the slope-tangential plane
         fire_behavior = burn_cell_toward_phi_gradient(space_time_cubes, (t0, y, x),
                                                       phi_gradient_xy, use_wind_limit,
-                                                      max_length_to_width_ratio)
+                                                      surface_lw_ratio_model,
+                                                      crown_max_lw_ratio)
 
         # Check whether cell has a positive phi magnitude
         if phi_magnitude_xy > 0.0:
@@ -7886,7 +7894,8 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
         # Calculate the fire behavior normal to the fire front on the slope-tangential plane
         fire_behavior_star = burn_cell_toward_phi_gradient(space_time_cubes, (t1, y, x),
                                                            phi_gradient_xy_star, use_wind_limit,
-                                                           max_length_to_width_ratio)
+                                                           surface_lw_ratio_model,
+                                                           crown_max_lw_ratio)
 
         # Check whether cell has a positive phi magnitude
         if phi_magnitude_xy_star > 0.0:
@@ -7973,11 +7982,12 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
 
 
 def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolution, start_time,
-                               max_duration=None, use_wind_limit=True, max_length_to_width_ratio=None,
-                               max_cells_per_timestep=0.4, buffer_width=3, spot_ignitions={}, spot_config=None):
+                               max_duration=None, use_wind_limit=True, surface_lw_ratio_model="rothermel",
+                               crown_max_lw_ratio=None, max_cells_per_timestep=0.4, buffer_width=3,
+                               spot_ignitions={}, spot_config=None):
     """
     Given these inputs:
-    - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
+    - space_time_cubes             :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
       - slope                         :: rise/run
       - aspect                        :: degrees clockwise from North
       - fuel_model                    :: integer index in fm.fuel_model_table
@@ -7996,7 +8006,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
       - foliar_moisture               :: kg moisture/kg ovendry weight
       - fuel_spread_adjustment        :: float >= 0.0 (Optional: defaults to 1.0)
       - weather_spread_adjustment     :: float >= 0.0 (Optional: defaults to 1.0)
-    - output_matrices           :: dictionary of 2D Numpy arrays whose spatial dimensions match the space_time_cubes
+    - output_matrices              :: dictionary of 2D Numpy arrays whose spatial dimensions match the space_time_cubes
       - phi                           :: 2D float array of values in [-1,1]
       - fire_type                     :: 2D byte array (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
       - spread_rate                   :: 2D float array (m/min)
@@ -8005,18 +8015,19 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
       - flame_length                  :: 2D float array (m)
       - time_of_arrival               :: 2D float array (min)
       - firebrand_count               :: 2D integer array (number of firebrands) (Optional)
-    - cube_resolution           :: tuple with these fields
+    - cube_resolution              :: tuple with these fields
       - band_duration                 :: minutes
       - cell_height                   :: meters
       - cell_width                    :: meters
-    - start_time                :: minutes (from the start of the space_time_cube's temporal origin)
-    - max_duration              :: minutes (Optional)
-    - use_wind_limit            :: boolean (Optional)
-    - max_length_to_width_ratio :: float > 0.0 (Optional)
-    - max_cells_per_timestep    :: max number of cells the fire front can travel in one timestep (Optional)
-    - buffer_width              :: Chebyshev distance from frontier cells to include in tracked cells (Optional)
-    - spot_ignitions            :: dictionary of (ignition_time -> ignited_cells) (Optional: needed for spotting)
-    - spot_config               :: dictionary of spotting parameters (Optional: needed for spotting)
+    - start_time                   :: minutes (from the start of the space_time_cube's temporal origin)
+    - max_duration                 :: minutes (Optional)
+    - use_wind_limit               :: boolean (Optional)
+    - surface_lw_ratio_model       :: "rothermel" or "behave" (Optional)
+    - crown_max_lw_ratio           :: float > 0.0 (Optional)
+    - max_cells_per_timestep       :: max number of cells the fire front can travel in one timestep (Optional)
+    - buffer_width                 :: Chebyshev distance from frontier cells to include in tracked cells (Optional)
+    - spot_ignitions               :: dictionary of (ignition_time -> ignited_cells) (Optional: needed for spotting)
+    - spot_config                  :: dictionary of spotting parameters (Optional: needed for spotting)
       - random_seed                   :: seed for a numpy.random.Generator object
       - firebrands_per_unit_heat      :: firebrands/kJ
       - downwind_distance_mean        :: meters
@@ -8089,8 +8100,8 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
         # Spread fire one timestep
         results = spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, tracked_cells,
                                            cube_resolution, simulation_time, max_timestep, use_wind_limit,
-                                           max_length_to_width_ratio, max_cells_per_timestep, buffer_width,
-                                           spot_ignitions, spot_config, random_generator)
+                                           surface_lw_ratio_model, crown_max_lw_ratio, max_cells_per_timestep,
+                                           buffer_width, spot_ignitions, spot_config, random_generator)
 
         # Reset spread inputs
         simulation_time  = results["simulation_time"]
