Added David Saah to the authors list

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -1,6 +1,6 @@
 #+TITLE: The Pyretechnics Fire Behavior Library
 #+SUBTITLE: Copyright © 2023-2024 Spatial Informatics Group, LLC
-#+AUTHOR: Gary W. Johnson, Valentin Waeselynck, Chris Lautenberger
+#+AUTHOR: Gary W. Johnson, Valentin Waeselynck, Chris Lautenberger, David Saah
 
 * Document Settings :noexport:
 
