Added a profile command to make.sh

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -8147,7 +8147,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
      :END:
 
 #+NAME: run-spread-fire-with-phi-field
-#+begin_src python :results silent
+#+begin_src python :results silent :tangle ../prof/spread_fire.py
 import numpy as np
 import pyretechnics.eulerian_level_set as els
 from pyretechnics.space_time_cube import SpaceTimeCube
